@@ -71,6 +71,14 @@ namespace Orthanc
     virtual void GetPublicContent(Json::Value& value);
 
     virtual bool Serialize(Json::Value& value);
+
+    virtual bool GetOutput(std::string& output,
+                           MimeType& mime,
+                           const std::string& key)
+    {
+      // TODO
+      return false;
+    }
   };
 }
 
